packages/gitstafette-server/config/02-service.ytt.yml
#@ load("@ytt:data", "data")
---
apiVersion: v1
kind: Service
metadata:
  name:  #@ data.values.name
  labels:
    app.kubernetes.io/name: #@ data.values.name
  #! Only needed when using normal Ingress
  #@ if data.values.ingress.enabled:
  annotations:
    projectcontour.io/upstream-protocol.h2c: #@ '"' + str(data.values.app.grpcPort) + '"'
  #@ end
spec:
  type: #@ data.values.service.type
  ports:
    - name: http
      port: #@ data.values.service.port
      targetPort: http
      protocol: TCP
    - name: grpc
      port: #@ data.values.app.grpcPort
      targetPort: #@ data.values.app.grpcPort
      protocol: TCP
  selector:
    app.kubernetes.io/name: #@ data.values.name
