packages/gitstafette-server/config/03-ingress.ytt.yml

#@ load("@ytt:data", "data")
---

#@ if data.values.ingress.enabled:
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: '#@ data.values.name'
  labels:
    app.kubernetes.io/name: '#@ data.values.name'
  annotations: #@ data.values.ingress.annotations
spec:
  ingressClassName: #@ data.values.ingress.className
  tls: #@ data.values.ingress.tls
  rules:  #@ data.values.ingress.hosts
#@ end
