packages/gitstafette-server/config/04-http-proxy.ytt.yml
#@ load("@ytt:data", "data")
---
#@ if data.values.ingress.enabled:
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: '#@ data.values.name'
  labels:
    app.kubernetes.io/name: '#@ data.values.name'
  annotations: #@ data.values.httpproxy.annotations
spec:
  ingressClassName: #@ data.values.httpproxy.ingressClassName
  routes:
    - conditions:
        - prefix: #@ data.values.httpproxy.grpc.prefix 
      services:
        - name: #@ data.values.appName
          port: #@ data.values.app.grpcPort 
          protocol: h2c
    - conditions:
        - prefix: #@ data.values.httpproxy.http.prefix 
      services:
        - name: #@ data.values.appName
          port: #@ data.values.app.httpPort
      pathRewritePolicy:
        replacePrefix:
          - replacement: #@ data.values.httpproxy.http.replacement
  virtualhost:
    fqdn:  #@ data.values.httpproxy.fqdn 
#@ end
