packages/gitstafette-server/config/05-http-proxy.ytt.yml
#@ load("@ytt:data", "data")
#@ load("funcs.lib.yml", "TLSSecretName", "TLSCertName")
---
#@ if data.values.httpproxy.enabled:
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: #@ data.values.name
  labels:
    app.kubernetes.io/name: #@ data.values.name
  annotations: #@ data.values.httpproxy.annotations
spec:
  ingressClassName: #@ data.values.httpproxy.ingressClassName
  routes:
    - conditions:
        - prefix: #@ data.values.httpproxy.grpc.prefix
      services:
        - name: #@ data.values.name
          port: #@ data.values.app.grpcPort
          protocol: #@ data.values.httpproxy.grpc.protocol
    - conditions:
        - prefix: #@ data.values.httpproxy.http.prefix
      services:
        - name: #@ data.values.name
          port: #@ data.values.service.port
      pathRewritePolicy:
        replacePrefix:
          - replacement: #@ data.values.httpproxy.http.replacement
  virtualhost:
    fqdn:  #@ data.values.httpproxy.fqdn
    #@ if data.values.security.certmanager.generateCert:
    tls:
      secretName: #@ TLSSecretName(data.values.httpproxy.fqdn)
    #@ end
#@ end
